--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-  <title>CALC 1501B - Winter 2020 UWO </title>
+  <title>Math 9052B / Math 4152B - Winter 2021 UWO </title>
 </head>
 
 <body>
@@ -13,11 +13,11 @@
     <div class="section-wrapper">
       <div class="section">
         <h1 class="section-title">
-          Math 9052B / Math 4152B <br/><br/> Algebraic Topology (Winter 2020)
+          Math 9052B / Math 4152B <br/><br/> Algebraic Topology (Winter 2021)
         </h1>
         <div class="section-body">
           <div class="subsection">
-            <h3 class="subsection-title">Essential information</h3>
+            <h2 class="subsection-title">Essential information</h2>
             <div class="subsection-body">
               <table class="two-column-data">
                 <tr>
@@ -32,12 +32,12 @@
                 </tr>
                 <tr>
                   <td>Lectures</td>
-                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, SSC-3014</td>
+                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, on Zoom (Meeting ID: 947 1739 6649)</td>
                 </tr>
                 <tr>
                   <td>Office hours</td>
                   <td>
-                    TBD
+                    M 2:00 - 4:00 pm on Zoom + any (reasonable) time on Discord
                   </td>
                 </tr>
 		            <tr>
@@ -64,7 +64,7 @@
           </div>
 
           <div class="subsection">
-            <h3 class="subsection-title">Evaluation</h3>
+            <h2 class="subsection-title">Evaluation</h2>
             <div class="subsection-body">
               <table class="two-column-data">
                 <tr>
@@ -77,31 +77,46 @@
                 </tr>
                 <tr>
                   <td align="center">10%</td>
-                  <td>Final paper </td>
+                  <td>Final paper / project</td>
                 </tr>
               </table>
             </div>
+            <br/> <br/>
+            <h3>Exams</h3>
+            The midterm will tentatively be in class on the Tuesday in the first week of March (March 2).
+            Examinations will be conducted on Zoom. There might also
+            be an oral component. Students are required to have some means of showing their work on Zoom e.g.
+            a tablet or a webcam.
+
+            <h3>Homework</h3>
+            There will be weekly homework in this course posted every Thursday after class. Students will be required to type up their solutions in LaTeX. Instructions for uploading the homework will be posted along with the homework set. <br/> <br />
+
+            There will be no deadline extensions. The lowest homework grade will be dropped.
+
+            <h3>Final paper / project</h3>
+            This part of the evaluation is to be construed very broadly. Students are encouraged to find topics that interest them personally. A final report on will be due at the end of the semester. Instructions for the final report will be posted during the winter break. 
+
           </div>
 
           <div class="subsection">
-            <h3 class="subsection-title">Mode of Delivery</h3>
+            <h2 class="subsection-title">Mode of Delivery</h2>
             <div class="subsection-body">
-              Depending on the circumstances, the classes will either be held in-person and streamed over Zoom or held online over Zoom. In either case, students will be able to attend all the classes remotely. 
+              The classes will be held online over Zoom. Students are required to attend the lectures under their full legal name and to have their webcams on. If a student is unable to do so, they must obtain prior written permission of the instructor.
             </div>
           </div>
 
           <div class="subsection">
-            <h3 class="subsection-title">Technical Requirements</h3>
+            <h2 class="subsection-title">Technical Requirements</h2>
             <div class="subsection-body">
               Completion of this course will require you to have a reliable internet connection and a device that meets <a href="https://support.zoom.us/hc/en-us/articles/201362023-System-requirements-for-Windows-macOS-and-Linux">the system and technical requirements for Zoom</a>. 
-               ests and examinations in this course will be conducted either in-person or on Zoom. There might also
+              Tests and examinations in this course will be conducted either in-person or on Zoom. There might also
               be an oral component. Students are required to have some means of showing their work on Zoom e.g.
               a tablet or a webcam.
             </div>
           </div>
 
           <div class="subsection">
-            <h3 class="subsection-title">Academic Integrity</h3>
+            <h2 class="subsection-title">Academic Integrity</h2>
             <div class="subsection-body">
               Scholastic offenses are taken seriously and students are directed to read the appropriate policy, specifically, the definition of what constitutes a Scholastic Offence, <a href="http://www.uwo.ca/univsec/pdf/academic_policies/appeals/scholastic_discipline_undergrad.pdf">here</a>.
               Students are allowed to discuss assignment problems, but each student should write their solutions separately. <b>Copying solutions from other students, online sources, textbooks, etc., or showing your work to other students constitutes a scholastic offense and will result in a grade of negative 100% for the component and in some cases expulsion from the program.</b> All academic offenses are added to your student record.
@@ -110,7 +125,7 @@
 
 
           <div class="subsection">
-            <h3 class="subsection-title">Course Description</h3>
+            <h2 class="subsection-title">Course Description</h2>
             <div class="subsection-body">
               Algebraic topology is the study of topological spaces using tools of an algebraic nature, such as
               homology groups, cohomology groups and homotopy groups. It is one of the major cornerstones of
@@ -135,10 +150,10 @@
           <br/>
           <br/>
 
-<h3><strong>Accommodation </strong><strong>P</strong><strong>ol</strong><strong>i</strong><strong>c</strong><strong>i</strong><strong>es</strong></h3>
+<h2><strong>Accommodation </strong><strong>P</strong><strong>ol</strong><strong>i</strong><strong>c</strong><strong>i</strong><strong>es</strong></h2>
 <p>Students with disabilities work with Accessible Education (formerly SSD) which provides recommendations for accommodation based on medical documentation or psychological and cognitive testing. The Academic Accommodation for Students with Disabilities policy can be found at:</p>
 <p><span><a href="https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic%20Accommodation_disabilities.pdf">https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic Accommodation_disabilities.pdf</a></span></p>
-<h3><strong>Academic Consideration for Student Absence</strong></h3>
+<h2><strong>Academic Consideration for Student Absence</strong></h2>
 <p>Students will have up to two (2) opportunities during the regular academic year to use an on-line portal to self-report an absence during the semester, provided the following conditions are met: the absence is no more than 48 hours in duration, and the assessment for which consideration is being sought is worth 30% or less of the student&#8217;s final grade. Students are expected to contact their instructors within 24 hours of the end of the period of the self-reported absence, unless noted on the syllabus. Students are not able to use the self-reporting option in the following circumstances:</p>
 <ul class="squarelist">
 <li>for exams scheduled by the Office of the Registrar (e.g., December and April exams)</li>
@@ -152,12 +167,12 @@
 <p><span><a href="https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic_Consideration_for_absences.pdf">https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic_Consideration_for_absences.pdf</a></span></p>
 <p>and for the Student Medical Certificate (SMC), see:</p>
 <p><span><a href="http://www.uwo.ca/univsec/pdf/academic_policies/appeals/medicalform.pdf">http://www.uwo.ca/univsec/pdf/academic_policies/appeals/medicalform.pdf</a></span>&#160;</p>
-<h3>Religious Accommodation</h3>
+<h2>Religious Accommodation</h2>
 <p>Students should consult the University's list of recognized religious holidays, and should give reasonable notice in writing, prior to the holiday, to the Instructor and an Academic Counsellor if their course requirements will be affected by a religious observance. Additional information is given in the Western Multicultural Calendar:</p>
 <p><span><a href="https://multiculturalcalendar.com/ecal/index.php?s=c-univwo">https://multiculturalcalendar.com/ecal/index.php?s=c-univwo</a></span> &#160;</p>
 <p>You may also be eligible to write the Special Exam if you are in a &#8220;Multiple Exam Situation&#8221; (see <span><a href="http://www.registrar.uwo.ca/examinations/exam_schedule.html">http://www.registrar.uwo.ca/examinations/exam_schedule.html</a></span>).</p>
 <p>If a student fails to write a scheduled Special Examination, the date of the next Special Examination (if granted) normally will be the scheduled date for the final exam the next time this course is offered. The maximum course load for that term will be reduced by the credit of the course(s) for which the final examination has been deferred. See Academic Calendar for details (under <span><a href="https://www.westerncalendar.uwo.ca/PolicyPages.cfm?Command=showCategory&amp;PolicyCategoryID=5&amp;SelectedCalendar=Live&amp;ArchiveID=#SubHeading_70">Special Examinations</a></span>).</p>
-<h3>Academic Policies&#160;</h3>
+<h2>Academic Policies&#160;</h2>
 <p><span>The website for Registrarial Services </span>is <span><a href="http://www.registrar.uwo.ca">http://www.registrar.uwo.ca</a></span>.</p>
 <p>In accordance with policy, <span><a href="http://www.uwo.ca/its/identity/activatenonstudent.html">http://www.uwo.ca/its/identity/activatenonstudent.html</a></span>, the centrally administered e-mail account provided to students will be considered the individual&#8217;s official university e-mail address. It is the responsibility of the account holder to ensure that e-mail received from the University at his/her official university address is attended to in a timely manner.</p>
 <p>Participants in this course are not permitted to record the sessions, except where recording is an approved accommodation, or the participant has the prior written permission of the instructor.</p>
@@ -166,7 +181,7 @@
 <p>Completion of this course will require you to have a reliable internet connection and a device that meets the system requirements for Zoom. Information about the system requirements are available at the following link:</p>
 <p><span><a href="https://support.zoom.us/hc/en-us">https://support.zoom.us/hc/en-us</a></span></p>
 <p>Please note that Zoom servers are located outside Canada. If you would prefer to use only your first name or a nickname to login to Zoom, please provide this information to the instructor in advance of the test or examination.&#160;</p>
-<h3>Support Services</h3>
+<h2>Support Services</h2>
 <p>Please visit the Science &amp; Basic Medical Sciences Academic Counselling webpage for information on add/drop courses, academic considerations for absences, appeals, exam conflicts, and many other academic related matters:&#160; https://www.uwo.ca/sci/counselling/</p>
 <p>Please contact the course instructor if you require lecture or printed material in an alternate format or if any other arrangements can make this course more accessible to you. You may also wish to contact Student Accessibility Services (SAS) at (519) 661-2147 if you have any questions regarding accommodations.</p>
 <p>Western University is committed to a thriving campus as we deliver our courses in the mixed model of both virtual and face-to-face formats. We encourage you to check out the Digital Student Experience website to manage your academics and well-being: https://www.uwo.ca/se/digital/.</p>
