--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -32,7 +32,7 @@
                 </tr>
                 <tr>
                   <td>Lectures</td>
-                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, on Zoom (Meeting ID: 947 1739 6649)</td>
+                  <td>T 9:30-11:30 am, Th 9:30-10:30 am,<b> SSC-3014</b>  <!-- on Zoom (Meeting ID: 947 1739 6649 )--></td>
                 </tr>
                 <tr>
                   <td>Office hours</td>
