trying out details/summary

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2021-03-12 Fri 23:01 -->
+<!-- 2021-03-13 Sat 20:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Apurva Nakade</title>
@@ -190,7 +190,6 @@
   .org-svg { width: 90%; }
   /*]]>*/-->
 </style>
-<link rel="stylesheet" type="text/css" href="css/org.css"/>
 <script type="text/javascript">
 // @license magnet:?xt=urn:btih:e95b018ef3580986a04669f1b5879592219e2a7a&dn=public-domain.txt Public Domain
 <!--/*--><![CDATA[/*><!--*/
@@ -244,291 +243,99 @@
 </tbody>
 </table>
 
-<details id="orgfb307a6">
-<summary id="org1afc3aa">
-<p>
-aeoeu
-</p>
-</summary>
-<p>
-ending this
-</p>
-</details>
-
-<aside id="org158118e">
-<p>
-Lorem ipsum
-</p>
-</aside>
-<p>
-exports to:
-</p>
-
-<video controls="controls" width="350" id="org28ac95c">
-<source src="movie.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-<p>
-Your browser does not support the video tag.
-</p>
-</video>
 
 <p>
 I&rsquo;m a postdoc at the <a href="http://www.math.uwo.ca/">University of Western
 Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and
 <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.
-I like math, teaching, coding, and lots of other things.
 </p>
-<nav id="table-of-contents">
-<h2>Table of Contents</h2>
-<div id="text-table-of-contents">
-<ul>
-<li><a href="#hi">Hi!</a></li>
-<li><a href="#org717f123">Discrete math</a></li>
-<li><a href="#projects">Projects</a>
-<ul>
-<li><a href="#teaching-projects">Teaching Projects</a></li>
-<li><a href="#orgb306319">Directed Reading Program</a></li>
-<li><a href="#orgbd06789">Discrete math course - Fall 2020</a></li>
-<li><a href="#org145785b">Canada/USA Mathcamp</a></li>
-<li><a href="#org878b1ca">JHU Intersession courses</a></li>
-<li><a href="#org89842ab">Honors Single Variable Calculus</a></li>
-<li><a href="#research-projects">Research Projects</a></li>
-</ul>
-</li>
-</ul>
-</div>
-</nav>
-</div>
-</div>
-<div id="outline-container-org717f123" class="outline-2">
-<h2 id="org717f123">Discrete math</h2>
-</div>
-<div id="outline-container-projects" class="outline-2">
-<h2 id="projects">Projects</h2>
-<div class="outline-text-2" id="text-projects">
+
 <p>
-[[<a href="https://drive.google.com/file/d/1iQ_-iqu1x4ueYT4ucNbb_WgAeaf19Ysc/view?usp=sharing">https://drive.google.com/file/d/1iQ_-iqu1x4ueYT4ucNbb_WgAeaf19Ysc/view?usp=sharing</a>][]]
+I&rsquo;m currently teaching Algebraic Topology.
 </p>
 </div>
+</div>
 
-<div id="outline-container-teaching-projects" class="outline-3">
-<h3 id="teaching-projects">Teaching Projects</h3>
-<div class="outline-text-3" id="text-teaching-projects">
+<div id="outline-container-org6e5328f" class="outline-2">
+<h2 id="org6e5328f">Research</h2>
+</div>
+
+<div id="outline-container-org8a94552" class="outline-2">
+<h2 id="org8a94552">Mathcamp</h2>
+<div class="outline-text-2" id="text-org8a94552">
+<details id="orgbdb3884">
+<summary>Notes</summary>
+<table>
+
+
+<colgroup>
+<col  class="org-left">
+
+<col  class="org-left">
+
+<col  class="org-left">
+</colgroup>
+<tbody>
+<tr>
+<td class="org-left">testing tables inside summary</td>
+<td class="org-left">hello there</td>
+<td class="org-left">let&rsquo;s see</td>
+</tr>
+</tbody>
+</table>
+</details>
 </div>
 </div>
 
-<div id="outline-container-orgb306319" class="outline-3">
-<h3 id="orgb306319">Directed Reading Program</h3>
-<div class="outline-text-3" id="text-orgb306319">
+<div id="outline-container-orgc1b63be" class="outline-2">
+<h2 id="orgc1b63be">DRP</h2>
+<div class="outline-text-2" id="text-orgc1b63be">
 <p>
-The Directed Reading Program is a program for undergrads and grad
-students/postdocs. Undergrads are paired with a mentor whose interests
-align with theirs and they study a topic of their choice for one
-semester. It is intended to help motivated students explore topics in
-more depth than possible in a classroom setting. I co-organize the
-[DRP at UWO] and in the past have co-organized the [DRP at JHU].
-Following is the list of projects I&rsquo;ve mentored.
+Directed Reading Program is a program for undergrads and grad students/postdocs.
+Undergrads are paired with a mentor whose interests align with theirs and they study a topic of their choice for one semester.
+It is intended to help motivated students explore topics in more depth than possible in a classroom setting.
+I co-organize the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP at UWO</a> and in the past have co-organized the <a href="https://math.jhu.edu/drp.html">DRP at JHU</a>.
 </p>
-
+<details id="org25a761a">
+<summary>List of projects I've mentored:</summary>
 <ul class="org-ul">
-<li>Jacob Fabe, <i>Fundamental Group</i> from Topology by Munkres ([DRP, Fall
-2020])</li>
-<li>Tim Yau, <i>An Introduction to Manifolds</i> by Loring Tu. ([DRP, Fall
-2019][DRP, Fall 2020])</li>
-<li>Hannah Wool, <i>Topology</i> by Munkres. ([DRP, Spring 2019])</li>
-<li>Sydney Timmerman, [/Differential Geometry and Lie Groups for
-Physicists/] by Marián Fecko. ([DRP, Fall 2018])</li>
-<li>Eric Cochran, <i>An Introduction to Manifolds</i> by Loring Tu. ([DRP,
-Spring 2018])</li>
-<li>Chris Chia, <i>The Knot Book</i> by Adams Collins. ([DRP, Fall 2017])</li>
+<li>Clare Bedford, <a href="https://www.whitman.edu/documents/Academics/Mathematics/Grimm.pdf">Surreal numbers</a>, (<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP,
+Winter 2021</a>)</li>
+<li>Jacob Fabe, <i>Fundamental Group</i> from Topology by Munkres
+(<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP,
+Fall 2020</a>)</li>
+<li>Tim Yau, <i>An Introduction to Manifolds</i> by Loring Tu.
+(<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP,
+Fall 2019</a>)</li>
+<li>Hannah Wool, <i>Topology</i> by Munkres.
+(<a href="http://www.math.jhu.edu/drp.html#Spring2019">DRP, Spring 2019</a>)</li>
+<li>Sydney Timmerman,
+<a href="http://www.math.jhu.edu/drpfiles/F2018%20-%20Sydney.pdf"><i>Differential
+Geometry and Lie Groups for Physicists</i></a> by Marián Fecko.
+(<a href="http://www.math.jhu.edu/drp.html#Fall2018">DRP, Fall 2018</a>)</li>
+<li>Eric Cochran, <i>An Introduction to Manifolds</i> by Loring Tu.
+(<a href="http://www.math.jhu.edu/drp.html#Spring2018">DRP, Spring 2018</a>)</li>
+<li>Chris Chia, <i>The Knot Book</i> by Adams Collins.
+(<a href="http://www.math.jhu.edu/drp.html#Fall2017">DRP, Fall 2017</a>)</li>
 </ul>
+</details>
 </div>
 </div>
 
-<div id="outline-container-orgbd06789" class="outline-3">
-<h3 id="orgbd06789">Discrete math course - Fall 2020</h3>
-<div class="outline-text-3" id="text-orgbd06789">
-<p>
-Most of my time in Fall 2020 was spent designing and teaching an
-online Discrete Math course. This involved making [youtube videos],
-making and editing [WeBWorK] problem sets, managing discussion forums,
-other standard course related chores, and not going insane. I
-occasionally write about it on my [my wordpress blog].
-</p>
-</div>
+<div id="outline-container-org12fbb13" class="outline-2">
+<h2 id="org12fbb13">Notes</h2>
 </div>
 
-<div id="outline-container-org145785b" class="outline-3">
-<h3 id="org145785b">Canada/USA Mathcamp</h3>
-<div class="outline-text-3" id="text-org145785b">
-<p>
-Canada/USA Mathcamp is a summer camp for mathematically talented
-students ages 13‑18 from all over the world. Among other things, I
-have been designing and teaching some fun courses there. Notes for my
-courses can be found notes. I&rsquo;ve also supervised the
-following reading projects:
-</p>
-
-<ul class="org-ul">
-<li>Daniel Koizumi,
-<a href="https://drive.google.com/file/d/1bv-dCvd4nwfD68RxDeuDFoJ3dZIOoqPq/view">Riemann
-Surfaces</a> from <i>Algebraic Curves and Riemann Surfaces</i> by Rick
-Miranda.</li>
-<li>Kenji, Dedekind Domains in Lean and Michael, Konigsberg Bridge
-Problem in Lean ([code]).</li>
-<li>Ezra Erives, <i>Differential Geometry and Lie Groups for Physicists</i>
-by Marián Fecko.</li>
-<li>Edgar Wang, <i>Algebraic Topology</i> and Alan Yan, <i>Algebraic Topology</i>
-by Hatcher.</li>
-</ul>
-</div>
+<div id="outline-container-org22d6cf8" class="outline-2">
+<h2 id="org22d6cf8">Lean</h2>
 </div>
 
-<div id="outline-container-org878b1ca" class="outline-3">
-<h3 id="org878b1ca">JHU Intersession courses</h3>
-<div class="outline-text-3" id="text-org878b1ca">
-<p>
-I taught two week-long intersession courses titled Hitchhiker&rsquo;s Guide
-to Algebraic Topology and Symmetries &amp; Polynomials. I taught both of
-these courses in a flipped classroom format. I assigned students
-guided exercises, which they solved to learn more about the subject.
-</p>
-
-<ul class="org-ul">
-<li><p>
-<i>Hitchhiker&rsquo;s Guide to Algebraic Topology</i>
-</p>
-
-<p>
-For Hitchhiker&rsquo;s Guide to Algebraic Topology, I asked the students
-to read and present applications of algebraic topology to other
-fields of science of their choosing. We had several exciting
-conversations about things like applications of knot theory to
-protein folding and data science. The notes and the student
-presentations can be found
-<a href="https://apurvanakade.github.io/courses/2017_h2g2_alg_top/index.html">here</a>.
-</p></li>
-
-<li><p>
-<i>Symmetries &amp; Polynomials</i>
-</p>
-
-<p>
-In the Symmetries &amp; Polynomials course, I taught group theory using
-permutations of elements and its connection to Galois theory using
-roots of polynomials. The problem sets for this course can be found
-<a href="https://apurvanakade.github.io/teaching-portfolio/drive.google.com/file/d/1dChuk8J7s31C8xGurzsbf988VORnyXgb/view">here</a>.
-</p></li>
-</ul>
-</div>
+<div id="outline-container-orge2e49d3" class="outline-2">
+<h2 id="orge2e49d3">Writing</h2>
 </div>
 
-<div id="outline-container-org89842ab" class="outline-3">
-<h3 id="org89842ab">Honors Single Variable Calculus</h3>
-<div class="outline-text-3" id="text-org89842ab">
-<p>
-At JHU, I designed and taught a full semester Honors Single Variable
-Calculus course for two semesters. This was an experimental full
-semester four-credit course offered at JHU to first-year
-undergraduates. The course covered all of the first-year calculus and
-introduced students to proof writing. This is the first course I had
-to design from scratch. The materials for this course can be found
-<a href="https://apurvanakade.github.io/courses/2018_Honors_Calc/">here</a>.
-</p>
-</div>
-</div>
-
-<div id="outline-container-research-projects" class="outline-3">
-<h3 id="research-projects">Research Projects</h3>
-<div class="outline-text-3" id="text-research-projects">
-<p>
-I work in the area of algebraic topology and homotopy theory. My broad
-interests are in understanding how homotopy theoretic tools can be used
-to solve problems from other areas of math.
-</p>
-
-<ul class="org-ul">
-<li><p>
-<b>Proof Formalization</b>
-</p>
-
-<p>
-I have recently gotten interesting in teaching math to computers using
-<a href="https://leanprover.github.io/about/">Lean</a>. This is different from
-doing computations as here we are trying to teach math to computers
-the same way we understand it.
-[[<a href="courses/lean_at_MC2020/index.html">courses/lean_at_MC2020/index.html</a>][]] I taught a course about
-it at [Mathcamp 2020].
-</p>
-
-<p>
-My primary interest in Lean is as a potential tool for teaching math
-proofs. My secondary interest lies in combining machine learning and
-theorem proving. These are very long term goals as the field of
-theorem proving, although rapidly growing, is still very nascent.
-</p></li>
-<li><p>
-<b>2-groups in Equivariant Elliptic Cohomology</b>
-</p>
-
-<p>
-I got involved in this project thanks to an
-<a href="http://www.ams.org/programs/research-communities/2019MRC-Geometry">MRC
-Workshop</a>. 2-groups are higher categorical variants of groups. The
-goal of this project is to find a 2-categorical interpretation of some
-of naturally occurring objects (Drinfield double of a group) in
-mathematical physics and extend them using ideas from Equivariant
-Elliptic Cohomology.
-</p></li>
-
-<li><p>
-<b>2-groups in HoTT</b>
-</p>
-
-<p>
-I&rsquo;m trying to understand how to express and analyze 2-groups in
-homotopy type theory. Homotopy type theory is a branch of logic that
-encored homotopy equivalences into one of its fundamental axioms
-thereby providing a natural formalism for describing homotopy theory.
-</p></li>
-
-<li><p>
-<b>An application of the h-principle to Manifold Calculus</b>
-</p>
-
-<p>
-This was my PhD thesis, in which I applied homotopy theoretic
-techniques to study problems for differential geometry. Here is
-<a href="https://doi.org/10.1007/s40062-020-00255-3">the paper</a>
-(<a href="https://arxiv.org/abs/1711.07670">arXiv version</a>) based on the
-<a href="https://drive.google.com/file/d/1fHkImG-CTB2liHDIAo3YmzqBmN-Qibx6/view?usp=sharing">thesis</a>
-(Updated on: May 07, 2019). Here are some notes
-<a href="https://drive.google.com/file/d/1h8pHb-5HmM55_bwdzPYDB7cVHo4MHy-I/view?usp=sharing">notes1</a>,
-<a href="https://drive.google.com/file/d/1D8TSRQFVUVjM3wQ74npbH2hibrHsDho_/view?usp=sharing">notes2</a>
-from the talks I gave on this topic.
-</p></li>
-
-<li><p>
-<b>Protein folding using Markov chains</b>
-</p>
-
-<p>
-During my undergrad, I briefly worked on a project involving some
-protein folding models using basic linear algebra.
-<a href="https://drive.google.com/file/d/1xT6C4O_fMvpqoJCfnSq1ypeikM6XNMjw/view?usp=sharing">Information
-Processing Letters, IPL4801</a>.
-</p></li>
-
-<li><b>Projects that did not quite work out</b>
-
-<ul class="org-ul">
-<li>Spectral lifts of Soergel bimodules, joint with V. Lorman</li>
-<li>Finding loop space structures in exotic Kac-Moody groups</li>
-<li>Equivariant Embedding Calculus</li>
-</ul></li>
-</ul>
-</div>
-</div>
+<div id="outline-container-org717ce73" class="outline-2">
+<h2 id="org717ce73">Etc.</h2>
 </div>
 </div>
 </body>
