trying something out

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2021-03-13 Sat 20:46 -->
+<!-- 2021-03-15 Mon 23:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Apurva Nakade</title>
@@ -217,11 +217,7 @@
 <div id="content">
 <header>
 <h1 class="title">Apurva Nakade</h1>
-</header>
-<div id="outline-container-hi" class="outline-2">
-<h2 id="hi">Hi!</h2>
-<div class="outline-text-2" id="text-hi">
-<table>
+</header><table>
 
 
 <colgroup>
@@ -253,17 +249,76 @@ Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> 
 <p>
 I&rsquo;m currently teaching Algebraic Topology.
 </p>
+
+<div id="outline-container-org798df5c" class="outline-2">
+<h2 id="org798df5c">Teaching</h2>
+<div class="outline-text-2" id="text-org798df5c">
+</div>
+<div id="outline-container-orgf25a522" class="outline-3">
+<h3 id="orgf25a522">2021 - Winter - UWO - Algebraic Topology</h3>
+<div class="outline-text-3" id="text-orgf25a522">
+<p>
+I taught an introduction to algebraic topology course in Winter 2021 at UWO. The homework for this course can be found here: <a href="https://www.overleaf.com/read/pnhsgyffnsqj">https://www.overleaf.com/read/pnhsgyffnsqj</a>
+</p>
 </div>
 </div>
 
-<div id="outline-container-org6e5328f" class="outline-2">
-<h2 id="org6e5328f">Research</h2>
+<div id="outline-container-org5a36651" class="outline-3">
+<h3 id="org5a36651">2020 - Fall - UWO - Discrete Math</h3>
+<div class="outline-text-3" id="text-org5a36651">
+<p>
+I made some <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">youtube videos</a> for the Discrete Math course I taught at UWO in Fall 2020.
+</p>
+</div>
 </div>
 
-<div id="outline-container-org8a94552" class="outline-2">
-<h2 id="org8a94552">Mathcamp</h2>
-<div class="outline-text-2" id="text-org8a94552">
-<details id="orgbdb3884">
+<div id="outline-container-orgb0541ed" class="outline-3">
+<h3 id="orgb0541ed">2018 - Fall - JHU - Honors Single Variable Calculus</h3>
+<div class="outline-text-3" id="text-orgb0541ed">
+<p>
+I designed and taught an IBL-proof based Honors Single Variable Calculus course at JHU the notes of which can be found <a href="https://apurvanakade.github.io/courses/2018_Honors_Calc/index.html">here</a>.
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgda4f856" class="outline-3">
+<h3 id="orgda4f856">2018 - Intersession - JHU - Symmetries and Polynomials</h3>
+<div class="outline-text-3" id="text-orgda4f856">
+<p>
+I designed and taught a no-prerequisite two week IBL course introducing students to the unsolvability of polynomials using Galois theory. Notes for the course can be found <a href="https://drive.google.com/file/d/1dChuk8J7s31C8xGurzsbf988VORnyXgb/view?usp=sharing">here</a>.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org6c68bc5" class="outline-3">
+<h3 id="org6c68bc5">2017 - Fall - JHU - Honors Single Variable Calculus</h3>
+<div class="outline-text-3" id="text-org6c68bc5">
+<p>
+I designed and taught a IBL-proof based Honors Single Variable Calculus course at JHU the notes of which can be found <a href="https://apurvanakade.github.io/courses/2017_Honors_Calc/index.html">here</a>.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org1fa7a1d" class="outline-3">
+<h3 id="org1fa7a1d">2017 - Intersession - JHU - Hitchhiker&rsquo;s Guide to Algebraic Topology</h3>
+<div class="outline-text-3" id="text-org1fa7a1d">
+<p>
+I taught a two week course introducing non-math majors to algebraic topology. The notes can be found <a href="https://apurvanakade.github.io/courses/2017_h2g2_alg_top/index.html">here</a>.
+</p>
+</div>
+</div>
+</div>
+
+
+
+<div id="outline-container-orgb857586" class="outline-2">
+<h2 id="orgb857586">Research</h2>
+</div>
+
+<div id="outline-container-orge95289e" class="outline-2">
+<h2 id="orge95289e">Mathcamp</h2>
+<div class="outline-text-2" id="text-orge95289e">
+<details id="org6241642">
 <summary>Notes</summary>
 <table>
 
@@ -287,16 +342,16 @@ I&rsquo;m currently teaching Algebraic Topology.
 </div>
 </div>
 
-<div id="outline-container-orgc1b63be" class="outline-2">
-<h2 id="orgc1b63be">DRP</h2>
-<div class="outline-text-2" id="text-orgc1b63be">
+<div id="outline-container-org5e05d91" class="outline-2">
+<h2 id="org5e05d91">DRP</h2>
+<div class="outline-text-2" id="text-org5e05d91">
 <p>
 Directed Reading Program is a program for undergrads and grad students/postdocs.
 Undergrads are paired with a mentor whose interests align with theirs and they study a topic of their choice for one semester.
 It is intended to help motivated students explore topics in more depth than possible in a classroom setting.
 I co-organize the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP at UWO</a> and in the past have co-organized the <a href="https://math.jhu.edu/drp.html">DRP at JHU</a>.
 </p>
-<details id="org25a761a">
+<details id="orgede725e">
 <summary>List of projects I've mentored:</summary>
 <ul class="org-ul">
 <li>Clare Bedford, <a href="https://www.whitman.edu/documents/Academics/Mathematics/Grimm.pdf">Surreal numbers</a>, (<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP,
@@ -322,20 +377,20 @@ Geometry and Lie Groups for Physicists</i></a> by Marián Fecko.
 </div>
 </div>
 
-<div id="outline-container-org12fbb13" class="outline-2">
-<h2 id="org12fbb13">Notes</h2>
+<div id="outline-container-org712ef1f" class="outline-2">
+<h2 id="org712ef1f">Notes</h2>
 </div>
 
-<div id="outline-container-org22d6cf8" class="outline-2">
-<h2 id="org22d6cf8">Lean</h2>
+<div id="outline-container-org1959561" class="outline-2">
+<h2 id="org1959561">Lean</h2>
 </div>
 
-<div id="outline-container-orge2e49d3" class="outline-2">
-<h2 id="orge2e49d3">Writing</h2>
+<div id="outline-container-orgce117c1" class="outline-2">
+<h2 id="orgce117c1">Writing</h2>
 </div>
 
-<div id="outline-container-org717ce73" class="outline-2">
-<h2 id="org717ce73">Etc.</h2>
+<div id="outline-container-orga56bf49" class="outline-2">
+<h2 id="orga56bf49">Etc.</h2>
 </div>
 </div>
 </body>
