--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -45,9 +45,8 @@
                 <tr>
                   <td>Lectures</td>
 
-                  <td>T 9:30-11:30 am, Th 9:30-10:30 am,
-                  <b>SSC-3014</b>
-                  <!-- on Zoom (Meeting ID: 947 1739 6649 )--></td>
+                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, on Zoom
+                  (Meeting ID: 947 1739 6649)</td>
                 </tr>
 
                 <tr>
@@ -66,7 +65,6 @@
                   <a href=
                   "http://pi.math.cornell.edu/~hatcher/AT/ATchapters.html">
                   here</a>.</td>
-                  <td>
                 </tr>
 
                 <tr>
