add instructions for the final report

--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -128,9 +128,13 @@
             <h3>Final paper / project</h3>This part of the
             evaluation is to be construed very broadly. Students
             are encouraged to find topics that interest them
-            personally. A final report on will be due at the end of
-            the semester. Instructions for the final report will be
-            posted during the winter break.
+            personally. Here are some instructions for the final report:
+            <ol type="1">
+              <li>The report should be [5 - &epsilon;, 10 + &epsilon;] pages long (in standard latex font).</li>
+              <li>It should be written in a definition-theorem-proof-examples format.</li>
+              <li>The grading will be similar to the homework - you'll be graded for the details and not ideas.</li>
+              <li>You'll have to upload your reports on gradescope before the last day of classes (<b>April 12</b>).</li>
+            </ol>
           </div>
 
           <div class="subsection">
