--- a/course_notes.html
+++ b/course_notes.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Course Design - Apurva Nakade</title>
+        <title>Course Notes - Apurva Nakade</title>
         
         
 
@@ -94,7 +94,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="index.html">Apurva Nakade</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="resume.html">Résumé</a></li><li class="chapter-item "><a href="etc.html">Etc.</a></li></ol></li><li class="chapter-item expanded "><a href="course_design.html" class="active">Course Design</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="mathcamp.html">Mathcamp</a></li><li class="chapter-item "><a href="jhu.html">JHU</a></li><li class="chapter-item "><a href="uwo.html">UWO</a></li></ol></li><li class="chapter-item "><a href="math.html">Math</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="math_computers.html">Math &amp; Computers</a></li><li class="chapter-item "><a href="research.html">Research</a></li><li class="chapter-item "><a href="expository_notes.html">Expository Notes</a></li></ol></li><li class="chapter-item "><a href="teaching.html">Teaching</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><div>Teaching Philosophy</div></li><li class="chapter-item "><div>Advice to Students</div></li><li class="chapter-item "><a href="professional_development.html">Professional Development</a></li><li class="chapter-item "><a href="drp.html">DRP</a></li><li class="chapter-item "><a href="resources.html">Resources</a></li><li class="spacer"></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="index.html">Apurva Nakade</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="resume.html">Résumé</a></li><li class="chapter-item "><a href="etc.html">Etc.</a></li></ol></li><li class="chapter-item expanded "><a href="course_notes.html" class="active">Course Notes</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="mathcamp.html">Mathcamp</a></li><li class="chapter-item "><a href="jhu.html">JHU</a></li><li class="chapter-item "><a href="uwo.html">UWO</a></li></ol></li><li class="chapter-item "><a href="math.html">Math</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="math_computers.html">Math &amp; Computers</a></li><li class="chapter-item "><a href="research.html">Research</a></li><li class="chapter-item "><a href="expository_notes.html">Expository Notes</a></li></ol></li><li class="chapter-item "><a href="teaching.html">Teaching</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><div>Teaching Philosophy</div></li><li class="chapter-item "><div>Advice to Students</div></li><li class="chapter-item "><a href="professional_development.html">Professional Development</a></li><li class="chapter-item "><a href="drp.html">DRP</a></li><li class="chapter-item "><a href="resources.html">Resources</a></li><li class="spacer"></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#course-design" id="course-design">Course Design</a></h1>
+                        <h1><a class="header" href="#course-notes" id="course-notes">Course Notes</a></h1>
 <p>I love to design and teach new, and sometimes old, courses.
 Below are notes and problem sets from several of my course.
 Most notes are accessible to undergraduate and advanced high-school students.</p>
